Refactored Worrier.